[package]
name = "photo-normalise-paths"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.2", features = ["derive"] }
futures = "0.3.28"
globwalk = "0.8.1"
log = "0.4.17"
num-traits = "0.2.15"
pretty_env_logger = "0.4.0"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
